# PureADRemoverModule

./: .gitignore  AGENTS.md  Cargo.toml  README.md  clippy.toml
.cargo/: config.toml
.github/workflows/: release.yml
.omo/: boulder.json
.omo/evidence/: README.md  (+371 more)
crates/puread-android/: Cargo.toml
crates/puread-android/src/: chattr.rs  command_runner.rs  file_actions.rs  lib.rs  profiles.rs  secure_fs.rs  sqlite_actions.rs
crates/puread-android/src/chattr/: command.rs  error.rs  outcome.rs  profile.rs
crates/puread-android/src/command_runner/: adapter.rs  appops.rs  error.rs  invocation.rs  metadata.rs  output.rs  pm.rs  property.rs  runner.rs  settings.rs  validation.rs
crates/puread-android/src/file_actions/: backup.rs  error.rs  executor.rs  ledger.rs  metadata.rs  mutate.rs  outcome.rs  plan.rs  request.rs  snapshot.rs  target.rs
crates/puread-android/src/file_actions/executor/: directory_discard_tests.rs  idempotency_tests.rs  race_tests.rs  security_tests.rs  test_support.rs  tests.rs
crates/puread-android/src/file_actions/mutate/: guards.rs  metadata_ops.rs  primary.rs  test_hooks.rs
crates/puread-android/src/file_actions/mutate/primary/: backup_move.rs  path_ops.rs
crates/puread-android/src/profiles/: error.rs  executor.rs  record.rs  rules.rs  xml.rs  xml_bool.rs  xml_hooks.rs
crates/puread-android/src/profiles/executor/: appops_components.rs  rom.rs  shared.rs
crates/puread-android/src/profiles/executor/appops_components/: skip.rs
crates/puread-android/src/profiles/xml/: tests.rs
crates/puread-android/src/secure_fs/: fallback.rs  unix.rs
crates/puread-android/src/sqlite_actions/: backup.rs  error.rs  ledger.rs  metadata.rs  minimal.rs  runner.rs  target.rs  target_host.rs  target_mapping.rs  target_path_kind.rs  types.rs  validate.rs
crates/puread-android/src/sqlite_actions/runner/: backup_ops.rs  backup_tests.rs  delete.rs  delete_race_tests.rs  hooks.rs  ledger_state.rs  mutation.rs  race_tests.rs  security_tests.rs  test_support.rs  tests.rs  write_ops.rs
crates/puread-android/tests/: appops_components.rs  chattr.rs  command_runner.rs  component_profile_skips.rs  file_actions.rs  profile_skips.rs  rom_profiles.rs  sqlite_actions.rs
crates/puread-android/tests/appops_components/: durable.rs  support.rs
crates/puread-android/tests/command_runner/: support.rs
crates/puread-android/tests/file_actions/: support.rs
crates/puread-android/tests/rom_profiles/: security.rs  support.rs
crates/puread-android/tests/sqlite_actions/: boundary.rs  execution.rs  support.rs
crates/puread-cli/: Cargo.toml
crates/puread-cli/src/: cli.rs  error.rs  json.rs  ledger.rs  lib.rs  lock.rs  main.rs  profile.rs  profile_execute.rs  restore.rs  restore_fs.rs  rule_plan.rs  rules.rs  scan.rs
crates/puread-cli/src/profile_execute/: android_dispatch.rs  file_actions.rs  profile_restore.rs  profile_runtime.rs  report.rs  sqlite_actions.rs
crates/puread-cli/src/profile_execute/profile_restore/: final_state.rs  ledger.rs  report.rs
crates/puread-cli/src/rule_plan/: discovery.rs  targets.rs
crates/puread-cli/tests/: cli_execute_security.rs  cli_profile_restore.rs  cli_profile_restore_empty.rs  cli_profiles.rs  cli_sqlite_profiles.rs  ledger.rs  rules.rs  scan_dry_run.rs
crates/puread-cli/tests/cli_execute_security/: restore_adversarial_tests.rs
crates/puread-cli/tests/support/: cli_execute_security.rs  cli_profile_restore.rs  cli_profile_restore_apply.rs  cli_profiles.rs  cli_restore_adversarial.rs
crates/puread-core/: Cargo.toml
crates/puread-core/src/: error.rs  lib.rs  model.rs  path_expansion.rs  restore_ledger.rs
crates/puread-core/src/model/: action.rs  primitives.rs  profile.rs  risk.rs
crates/puread-core/src/path_expansion/: error.rs  expander.rs  resolved.rs  template.rs  validation.rs
crates/puread-core/src/path_expansion/glob/: mod.rs  parent.rs  pattern.rs
crates/puread-core/src/restore_ledger/: error.rs  record.rs  store.rs
crates/puread-core/tests/: path_expansion.rs  restore_ledger.rs  rule_model.rs
crates/puread-daemon/: Cargo.toml
crates/puread-daemon/src/: config.rs  error.rs  event.rs  event_loop.rs  lib.rs  main.rs  main_tests.rs  signals.rs  watcher.rs
crates/puread-daemon/src/event_loop/: control.rs
crates/puread-daemon/src/file_rule_integration/: apply.rs  config.rs  loader.rs  mod.rs  planner.rs
crates/puread-daemon/src/scheduler/: config.rs  decision.rs  engine.rs  jitter.rs  mod.rs  policy.rs
crates/puread-daemon/tests/: event_loop.rs  file_rule_integration.rs  scheduler.rs
crates/puread-daemon/tests/file_rule_integration/: fixture.rs  harness.rs
crates/puread-rules/: Cargo.toml
crates/puread-rules/fixtures/invalid/: bad_default_enabled.toml  bad_package.toml  bad_path.toml  bad_risk.toml  bad_rollback.toml  bad_values.toml  forbidden_category.toml  forbidden_field.toml  malformed.toml  missing_rollback.toml  missing_source.toml  unknown_field.toml
crates/puread-rules/fixtures/valid/: appops.toml  component.toml  file_path.toml  rom_profile.toml  sdk_cache.toml  source_prompt_is_data.toml  sqlite.toml
crates/puread-rules/src/: category.rs  error.rs  lib.rs  parse.rs  raw.rs  rollback.rs  rule.rs  source.rs  target.rs  validation.rs
crates/puread-rules/src/rule/: metadata.rs  rollback_input.rs  schedule.rs  source_input.rs  target_input.rs
crates/puread-rules/tests/: rule_parsing.rs
module/: action.sh  customize.sh  module.prop  service.sh  uninstall.sh
scripts/: build-module.sh  generate-update-metadata.sh  package-module.sh  qa-android.sh  test-service-lifecycle.sh  test-uninstall-lifecycle.sh  update-upstream.sh  verify-local.sh
upstream/: README.md  upstream_manifest.json
xtask/upstream-report/: Cargo.toml
xtask/upstream-report/src/: classifier.rs  cli.rs  error.rs  main.rs  manifest.rs  report.rs  scanner.rs
xtask/upstream-report/src/classifier/: executable.rs  forbidden.rs  useful.rs
xtask/upstream-report/src/scanner/: fs_walk.rs  source_meta.rs  zip_read.rs
xtask/upstream-report/tests/: args.rs  directory_report.rs  git_unavailable.rs  zip_report.rs
(+35 files in other folders)
