[package]
name = "puread-android"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Android adapter boundary for the PureAD non-domain ad remover module."

[dependencies]
fs2 = "0.4"
puread-core = { path = "../puread-core" }
quick-xml = "0.38"
rustix = { version = "1.1.4", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror.workspace = true
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde", "serde-well-known"] }

[lints]
workspace = true
