[package]
name = "puread-daemon"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Daemon entrypoint scaffold for the PureAD non-domain ad remover module."

[dependencies]
puread-core = { path = "../puread-core" }

[lints]
workspace = true
