[package]
name = "puread-rules"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Rule loading boundary for the PureAD non-domain Android ad remover module."

[dependencies]
puread-core = { path = "../puread-core" }
serde = { version = "1.0", features = ["derive"] }
thiserror.workspace = true
toml = "0.8"

[lints]
workspace = true
